--- a/help/genome.html
+++ b/help/genome.html
@@ -15,17 +15,17 @@
 <tr>
  <td width="50%">
   <strong>
-   <a href="/help/genome.html#help_genename" title="The gene name is provded by genbank or the SGD">Gene Name:</a>
+   <a href="/help/genome.html#genename" title="The gene name is provded by genbank or the SGD">Gene Name:</a>
   </strong> YLR318W EST2,<br>
-   <a href="/help_genome#help_linkout" title="View help on the Link out field">SGD Link</a><br>
+   <a href="/help/genome.html#linkout" title="View help on the Link out field">SGD Link</a><br>
   <strong>
-   <a href="/help_detail#help_accession" title="Check out the help on accession">Accession:</a>
+   <a href="/help/detail.html#accession" title="Check out the help on accession">Accession:</a>
   </strong> SGDID:S0004310<br>
   <strong>
-   <a href="/help_detail#help_species" title="Check out the help on species">Species:</a>
+   <a href="/help/detail.html#species" title="Check out the help on species">Species:</a>
   </strong><i> Saccharomyces cerevisiae</i><br>
   <strong>
-   <a href="/help_detail#help_comments" title="Check out the comments help">Comments:</a>
+   <a href="/help/detail.html#comments" title="Check out the comments help">Comments:</a>
   </strong>  Chr XII from 766542-769196  <br>
  </td>
  <td width="50%">
@@ -34,7 +34,7 @@
   <a href="/help/blast.html" title="Check out the help on blast"> Remote Blast</a>.<br>
   <strong>Graph</strong>
   <a href="/help/landscape.html" title="Read the help regarding the landscape view.">MFE minima</a> or
-  <a href="/help/download.html#help_sequence" title="Read help regarding downloading sequences.">Download Sequence</a><br>
+  <a href="/help/download.html#sequence" title="Read help regarding downloading sequences.">Download Sequence</a><br>
  </td>
 </tr>
 
@@ -42,19 +42,19 @@
  <tr bgcolor="#000000">
   <td width="33%">
    <div align="center"><strong><font color="#FFFFFF">
-    <a href="/help/genome.html#help_position" title="Read help regarding the position of a slippery site.">Position</a>
+    <a href="/help/genome.html#position" title="Read help regarding the position of a slippery site.">Position</a>
    </font></strong></div>
   </td>
 
   <td width="33%">
    <div align="center"><strong><font color="#FFFFFF">
-    <a href="/help/genome.html#help_slipsite" title="Read help regarding the slippery sites.">Slippery Site</a>
+    <a href="/help/genome.html#slipsite" title="Read help regarding the slippery sites.">Slippery Site</a>
    </font></strong></div>
   </td>
 
   <td width="33%">
    <div align="center"><strong><font color="#FFFFFF">
-    <a href="/help/genome.html#help_folds" title="Read help regarding the number of folds.">#Folds</a>
+    <a href="/help/genome.html#folds" title="Read help regarding the number of folds.">#Folds</a>
    </font></strong></div>
   </td>
 
@@ -78,7 +78,7 @@
 <tr>
  <td width="33%">
  <div align="center"><strong><font face="Courier New, Courier, mono">
-  <a href="/detail?id=4175&accession=SGDID:S0004310&slipstart=72" title="Click to view the detailed information for this PRF signal.">72</a>
+  <a href="/detail.html?id=4175&accession=SGDID:S0004310&slipstart=72" title="Click to view the detailed information for this PRF signal.">72</a>
  </font></strong></div>
  </td>
  
@@ -118,10 +118,10 @@
  <tr align="left" valign="top">
   <td width="400">
     <font color="#000000" face="Courier New, Courier, mono"><br>
-    <font color="Green">Green</font>: <a href="/help/genome.html#help_codons">0 Frame Start Codon</a><br>
-    <font color="Red">Red</font>: <a href="/help/genome.html#help_codons">0 Frame Stop Codon</a><br>
-    <font color="Blue">Blue</font>: <a href="/help/genome.html#help_codons">Slippery Site</a><br>
-    <font color="Orange">Orange</font>: <a href="/help/genome.html#help_codons">First -1 Frame Stop Codon</a><br>
+    <font color="Green">Green</font>: <a href="/help/genome.html#codons">0 Frame Start Codon</a><br>
+    <font color="Red">Red</font>: <a href="/help/genome.html#codons">0 Frame Stop Codon</a><br>
+    <font color="Blue">Blue</font>: <a href="/help/genome.html#codons">Slippery Site</a><br>
+    <font color="Orange">Orange</font>: <a href="/help/genome.html#codons">First -1 Frame Stop Codon</a><br>
   </td>
  </tr>
  <tr align="left" valign="top">
@@ -137,7 +137,7 @@
 
     <font face="Courier New, Courier, mono">
 1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong><font color = "Green">A</font></strong><strong><font color = "Green">T</font></strong><strong><font color = "Green">G</font></strong> AAA ATC TTA TTC GAG TTC ATT CAA GAC AAG CTT GAC ATT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;42<br>
-43&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GAT CTA CAG ACC AAC AGT ACT TAC AAA GA<strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong> <strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong><strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong><strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">T</font></a></strong></font></a></strong> <strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">T</font></a></strong></font></a></strong><strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">T</font></a></strong></font></a></strong><strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong></font></a></strong> <strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue">A</font></a></strong><strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue">A</font></a></strong><strong><a href="/detail?accession=SGDID:S0004310&slipstart=75"><font color = "Blue">A</font></a></strong> TGT GGT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;87<br>
+43&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GAT CTA CAG ACC AAC AGT ACT TAC AAA GA<strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong> <strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">T</font></a></strong></font></a></strong> <strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">T</font></a></strong></font></a></strong><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">T</font></a></strong></font></a></strong><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue"><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=72"><font color = "Blue">A</font></a></strong></font></a></strong> <strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue">A</font></a></strong><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue">A</font></a></strong><strong><a href="/detail.html?accession=SGDID:S0004310&slipstart=75"><font color = "Blue">A</font></a></strong> TGT GGT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;87<br>
 
 88&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CAC TTC AAT GGC CTC GA<strong><font color = "Orange">T</font></strong> <strong><font color = "Orange">G</font></strong><strong><font color = "Orange">A</font></strong>A ATT CTA ACT ACG TGT TTC GCA CTA&nbsp;&nbsp;&nbsp;&nbsp;132<br>
 133&nbsp;&nbsp;&nbsp;&nbsp;CCA AAT TCA AGA AAA ATA GCA TTA CCA TGC CTT CCT GGT GAC TTA&nbsp;&nbsp;&nbsp;&nbsp;177<br>
@@ -173,14 +173,14 @@
 </table>
 
 <p>
-<a name="help_genename">Gene name</a>
+<a name="genename">Gene name</a>
  The gene name is provided by the SGD or NCBI.  It is often but not
  always the short hand name for the gene.  The comments field often
  proves more useful for actually learning what a given gene is. 
 </p>
 
 <p>
-<a name="help_comments">Comments</a>
+<a name="comments">Comments</a>
  The comments field provides a bit more detail than the gene name.  It
  will often provide the gene family, the source of the given sequence
  (mRNA/cDNA etc) and some information if you need to track down the
@@ -188,7 +188,7 @@
 </p>
 
 <p>
-<a name="help_linkout">Link out</a>
+<a name="linkout">Link out</a>
  Each gene comes with a link to its entry at 
  <a href="http://www.yeastgenome.org" rel="external" target="_blank">yeastgenome.org</a>
  or the <a href="http://ncbi.nlm.nih.gov" rel="external" target="_blank">NCBI</a>.
@@ -199,7 +199,7 @@
 </p>
 
 <p>
-<a name="help_position">Position</a>
+<a name="position">Position</a>
  Each gene entry comes with a table sorted by position relative to the start of the mRNA sequence.
  As a point of reference, the start and stop codons are listed.  There is a mild bias towards PRF
  signals which are 5' proximal, thus examining earlier PRF signals first is useful.  Clicking on a
@@ -207,14 +207,14 @@
 </p>
 
 <p>
-<a name="help_slipsite">Slippery Site</a>
+<a name="slipsite">Slippery Site</a>
  There are 24 canonical slippery sites following the motif: NNNWWWH.  There is mild bias towards
  slippery sites consisting of all weak bases.  Thus examining NNNNNNH PRF signals first is
  potentially useful.
 </p>
 
 <p>
-<a name="help_folds">Number of folds</a>
+<a name="folds">Number of folds</a>
  Not every putative PRF signal has been folded yet using <i>pknots, nupack, or hotknots</i>.
  Sequences which have greater numbers of folks have been folded with a larger number of
  sequence window sizes and so provide more information.  Some sequences have more folds than
@@ -222,7 +222,7 @@
 </p>
 
 <p>
-<a name="help_codons">Highlighted codons</a>
+<a name="codons">Highlighted codons</a>
  When viewing the mRNA sequence of a particular gene, it is possible to see a few attributes
  at a glance.  The start and stop codons are highlighted in green and red respectively.  Each
  putative PRF signal is visible as a link to its detailed view.  Following each PRF signal is
