--- a/gene_summary.html
+++ b/gene_summary.html
@@ -2,7 +2,7 @@
  <tr align="left" valign="top">
    <td width="50%">
     <strong>
-     <a href="/help_genome#help_genename" title="The gene name is provided by genbank or the SGD" rel="external" target="_blank">Gene Name:</a>
+     <a href="/help/genome.html#genename" title="The gene name is provided by genbank or the SGD" rel="external" target="_blank">Gene Name:</a>
     </strong> <a href="/go_test.html?genename=<% $genename %>">
       <% $genename %>
 %   if ($hgnc_name) {
@@ -11,13 +11,13 @@
     </a>
    <br>
    <strong>
-    <a href="/help_detail#help_accession" title="Check the help for accession" rel="external" target="_blank">Accession:</a>
+    <a href="/help/detail.html#accession" title="Check the help for accession" rel="external" target="_blank">Accession:</a>
    </strong> <% $accession %><br>
    <strong>
-    <a href="/help_detail#help_species" title="Check the help for species" rel="external" target="_blank">Species:</a>
+    <a href="/help/detail.html#species" title="Check the help for species" rel="external" target="_blank">Species:</a>
    </strong><i><% $long_species %></i><br>
    <strong>
-    <a href="/help_genome#help_comments" title="Check the help for the comment field" rel="external" target="_blank">Comments:</a>
+    <a href="/help/genome.html#comments" title="Check the help for the comment field" rel="external" target="_blank">Comments:</a>
    </strong> <% $comment %><br>
   </td>
   <td width="50%">
