--- a/viral.html
+++ b/viral.html
@@ -1,6 +1,4 @@
-<p>Some viral PRF signals:</p>
-<li>
-<ul>
+<p>
 <%perl>
 open(IN, "<$ENV{PRFDB_HOME}/data/recode2.txt");
 my @acc = ();
@@ -16,20 +14,12 @@ while (my $line = <IN>) {
 	my @positions = split(/\,/, $position);
 	$position = $positions[0];
     }
-    my $string = qq|<li>Accession:<a href="/detail.html?accession=$accession&slipstart=$position">$accession</a>, Position: $position</li>\n|;
+
+    my $species = $db->MySelect(type => 'single', statement => "SELECT genename FROM gene_info WHERE accession = '$accession'");
+
+    my $string = qq|Species: ${species}, Accession:<a href="/search.html?accession=$accession">$accession</a>, Position: $position<br>\n|;
     print "$string";
 }
 
-foreach my $ac (@acc) {
-    my $num = $db->MySelect(type => 'single', statement => "SELECT COUNT(id) FROM genome WHERE accession = '$ac'");
-    print "TESTME: $ac $num<br>\n";
-    if ($num == 0) {
-	$db->Import_CDS($ac);
-	sleep(1);
-    }
-
-    
-}
-
 </%perl>
-</ul>
+</p>
