--- a/print_gene.html
+++ b/print_gene.html
@@ -14,7 +14,7 @@
  </tr>
 </table>
 % my $sp = $db->MySelect(statement => "SELECT species FROM gene_info WHERE accession = ?", vars => [$accession], type => 'single');
-% print "TESTME: $sp<br>\n";
+%# print "TESTME: $sp<br>\n";
 % my $in = $db->MySelect(statement => "SELECT orf_start, orf_stop, mrna_seq, direction, id FROM genome WHERE accession = ?", vars =>[$accession], type => 'row');
 % my $mt = "mfe_$sp";
 % $mt = "mfe_virus" if ($mt =~ /virus/);
@@ -41,7 +41,6 @@
 %   push (@minus, $s->[1]);
 %  }
 % my $str = HTMLMisc::Create_Pretty_mRNA(show_frame => $show_frame, accession => $accession, mrna_seq => $in->[2], orf_start => $in->[0], orf_stop => $in->[1], slipsites => \@slipsites, minus_bp => \@minus, snps => $snp_struct,);
-
 <table bgcolor="#E8E8E8" align="center">
   <tr>
     <td>
@@ -78,7 +77,148 @@ value over the ORF, the horizontal red line shows the mean pknots value over the
 the horzontal blue line shows the mean nupack value.  green, red, and blue lines delineate
 the MFE over a sliding 105bp window.</p>
 <& print_landscape.html, accession => "$accession", species => "$sp" &>
-</form>   </tr>
+
+% if ($sp eq 'saccharomyces_cerevisiae') {
+%  my ($systematic, $common) = split(/\s+/, $genename);
+%  my $ingolia_json;
+%  $ingolia_json = qq"/ingolia/json/${systematic}.json";
+<form method="post" action="print_gene.html?species=saccharomyces_cerevisiae&accession=<% $accession %>&show_frame=<% $show_frame %>&translate=<% $translate %>">
+% my $zoom_new = $zoom + $zoom_change;
+<select name="zoom_change" onchange="this.form.submit()">
+  <option value="0.0">Unchanged.</option>
+  <option value="0.5">Bigger</option>
+  <option value="-0.5">Smaller</option>
+</select>
+<div id="choices"></div>
+<input type="hidden" name="zoom" value="<% $zoom_new %>">
+</form>
+
+% my $len = $in->[1] - $in->[0];
+% my $picture_width = (($len + 100) / 2) * $zoom_new;
+% my $picture_height = $picture_width / 4;
+
+<table>
+  <tr>
+   <td><center>
+    <div id="ingolia" style="width:<% $picture_width %>;height:<% $picture_height %>;"></div>
+   </center></td>
+  </tr>
+  <tr>
+
+  </tr>
+</table>
+
+
+<div id="ingolia" style="width:<% $picture_width %>;height:<% $picture_height %>;"></div>
+<script type="text/javascript" id="ingolia">
+$(function() {
+ var choiceContainer = $("#choices");
+ var datasets;
+
+ $.ajax({
+  async: false,
+  url: "<% $ingolia_json %>",
+  dataType: "json",
+  success:  function(json) {
+   datasets=json;
+  }
+ });
+
+ var options = {
+  colors: [ "black", "darkblue", "green", "red" ],
+  series: {
+   stack: true,
+   lines: { show:1, fill:0 },
+   bars: { show:false, fill:1, lineWidth:0.3, barWidth:1.0 } },
+  grid: { hoverable: true, clickable: true },
+  yaxis: {
+   axisLabel: 'Hits',
+   axisLabelUseCanvas: true },
+  xaxis: {
+   axisLabel: 'Position',
+   axisLabelUseCanvas: true }
+ };
+
+// hard-code color indices to prevent them from shifting as series are turned on/off
+ var i = 0;
+ $.each(datasets, function(key, val) {
+  val.color = i;
+  ++i;
+ });
+
+ function append_choices() {
+  $.each(datasets, function(key, val) {
+   choiceContainer.append('<input type="checkbox" name="' + key + '" checked="checked" id="id' + key + '"><label for="id' + key + '">' + val.label + '</label>\n');
+  });
+  choiceContainer.find("input").click(plotAccordingToChoices);
+ }
+
+ function plotAccordingToChoices() {
+  var data = [];
+  var final_plot;
+  var series;
+  choiceContainer.find("input:checked").each(function () {
+   var key = $(this).attr("name");
+   if (key && datasets[key]) {
+    data.push(datasets[key]);
+   }
+   if (data.length > 0) {
+    final_plot = $.plot($("#ingolia"), data, options);
+    series = final_plot.getData();
+   }
+  });
+  return(series);
+ }  // end of plotAccordingToChoices
+
+ function showTooltip(x, y, contents) {
+  $('<div id="tooltip">' + contents + '</div>').css( {
+   position: 'absolute',
+   display: 'none',
+   top: y + 5,
+   left: x + 5,
+   border: '1px solid #fdd',
+   padding: '2px',
+   'background-color': '#fee',
+   opacity: 0.80
+  }).appendTo("body").fadeIn(200);
+ }
+
+ append_choices();
+ data = plotAccordingToChoices();
+
+
+/*  The original plotter
+ $.getJSON('<% $ingolia_json %>', function(series) {
+  var dat =  series;
+  var ing_plot = $.plot($("#ingolia"), dat, options);
+ });
+*/
+
+ var previousPoint = null;
+ $("#ingolia").bind("plothover", function (event, pos, item) {
+  $("#x").text(pos.x.toFixed(0));
+  $("#y").text(pos.y.toFixed(0));
+   if (item) {
+    if (previousPoint != item.datapoint) {
+     previousPoint = item.datapoint;
+    $("#tooltip").remove();
+    var x = item.datapoint[0].toFixed(0),
+    y = item.datapoint[1].toFixed(0);
+    showTooltip(item.pageX, item.pageY,
+    item.series.label + " at pos. " + x + " hit " + y + " times.");
+   }
+  }
+  else {
+   $("#tooltip").remove();
+   previousPoint = null;
+  }
+ });
+});
+</script>
+% }
+
+</form>
+</tr>
 
 % my $aux_info = $db->MySelect(statement => "SELECT publications, db_xrefs, gene_synonyms FROM gene_info WHERE accession = ?", vars => [$accession]);
 % my $publications = $aux_info->[0]->[0];
@@ -132,4 +272,6 @@ This gene is referenced as:
  $accession => "SGDID:S0004310"
  $translate => undef
  $show_frame => "none"
+ $zoom => 1.0
+ $zoom_change => 0.0
 </%args>
