--- a/print_gene.html
+++ b/print_gene.html
@@ -215,7 +215,120 @@ $(function() {
  });
 });
 </script>
-% }
+
+%  my $pars_json = qq"/pars/json/${systematic}.json";
+%  my $file = qq"$ENV{PRFDB_HOME}$pars_json";
+%  if (-f $file) {
+<div id="pars_choices"></div>
+<div id="pars" style="width:<% $picture_width %>;height:<% $picture_height %>;"></div>
+<script type="text/javascript" id="pars">
+$(function() {
+ var choiceContainer = $("#pars_choices");
+ var datasets;
+
+ $.ajax({
+  async: false,
+  url: "<% $pars_json %>",
+  dataType: "json",
+  success:  function(json) {
+   datasets=json;
+  }
+ });
+
+ var options = {
+  colors: [ "darkblue", "green", "red"],
+%# "darkblue", "green", "red" ],
+  series: {
+   lines: { show:1, fill:0 },
+   bars: { show:false, fill:1, lineWidth:0.3, barWidth:1.0 } },
+  grid: { hoverable: true, clickable: true },
+  yaxis: {
+   axisLabel: 'PARS score',
+   axisLabelUseCanvas: true },
+  xaxis: {
+   axisLabel: 'Position',
+   axisLabelUseCanvas: true }
+ };
+
+// hard-code color indices to prevent them from shifting as series are turned on/off
+ var i = 0;
+ $.each(datasets, function(key, val) {
+  val.color = i;
+  ++i;
+ });
+
+ function append_choices() {
+  $.each(datasets, function(key, val) {
+   choiceContainer.append('<input type="checkbox" name="' + key + '" checked="checked" id="id' + key + '"><label for="id' + key + '">' + val.label + '</label>\n');
+  });
+  choiceContainer.find("input").click(plotAccordingToChoices);
+ }
+
+ function plotAccordingToChoices() {
+  var data = [];
+  var final_plot;
+  var series;
+  choiceContainer.find("input:checked").each(function () {
+   var key = $(this).attr("name");
+   if (key && datasets[key]) {
+    data.push(datasets[key]);
+   }
+   if (data.length > 0) {
+    final_plot = $.plot($("#pars"), data, options);
+    series = final_plot.getData();
+   }
+  });
+  return(series);
+ }  // end of plotAccordingToChoices
+
+ function showTooltip(x, y, contents) {
+  $('<div id="pars_tooltip">' + contents + '</div>').css( {
+   position: 'absolute',
+   display: 'none',
+   top: y + 5,
+   left: x + 5,
+   border: '1px solid #fdd',
+   padding: '2px',
+   'background-color': '#fee',
+   opacity: 0.80
+  }).appendTo("body").fadeIn(200);
+ }
+
+ append_choices();
+ data = plotAccordingToChoices();
+
+
+/*  The original plotter
+ $.getJSON('<% $pars_json %>', function(series) {
+  var dat =  series;
+  var ing_plot = $.plot($("#pars"), dat, options);
+ });
+*/
+
+ var previousPoint = null;
+ $("#pars").bind("plothover", function (event, pos, item) {
+  $("#pars_x").text(pos.x.toFixed(0));
+  $("#pars_y").text(pos.y.toFixed(0));
+   if (item) {
+    if (previousPoint != item.datapoint) {
+     previousPoint = item.datapoint;
+    $("#pars_tooltip").remove();
+    var x = item.datapoint[0].toFixed(0),
+    y = item.datapoint[1].toFixed(0);
+    showTooltip(item.pageX, item.pageY,
+    item.series.label + "Position: " + x + " has score: " + y);
+   }
+  }
+  else {
+   $("#pars_tooltip").remove();
+   previousPoint = null;
+  }
+ });
+});
+</script>
+
+%  }  ## End if the pars filename exists
+% } ## End if species is saccharomyces_cerevisiae
 
 </form>
 </tr>
